# agentic_smolagents

./: README.md  main.py  pyproject.toml  retriever_tool.py
docs/: text.txt  text2.txt
