[project]
name = "agentic-smolagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "markitdown>=0.0.1a3",
    "pandas>=2.2.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3.1",
    "smolagents>=1.0.0",
]
