[project]
name = "agentic-smolagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "markitdown>=0.0.1a3",
    "rank-bm25>=0.2.2",
    "smolagents>=1.0.0",
]
